--- a/index.html
+++ b/index.html
@@ -268,6 +268,17 @@
                   </svg></a></li>
             </ul>
         </div> 
+        <div class="subscribe">
+<p class="subscribe-p">Subscribe</p>
+<form class="foot-form">
+  <label class="foot-label">
+    <input class="foot-input" name="subs" type="email" placeholder="E-mail"/>
+    <button class="foot-btn" type="submit"><svg class="label-svg" width="24" height="24">
+      <use href="./images/icons.svg#icon-Frame-3"></use>
+    </svg> Subscribe</button>
+  </label>
+</form>
+        </div>
     </div>
 </footer>
 <div class="modal-div is-hidden" data-modal>
