--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
     <button class="modal-btn" type="button" data-modal-close><svg class="modal-img" width="8" height="8">
       <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
     </svg></button>
+    <p class="modal-p"></p>
   </div>
 
 </div>
