--- a/index.html
+++ b/index.html
@@ -287,6 +287,14 @@
       <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
     </svg></button>
     <p class="modal-p"></p>
+    <form>
+      <div class="form-div">
+        <label class="modal-label" for="user-name">Name</label>
+        <div class="input-div">
+          <input class="input" id="user-name" name="user-name" type="text" />
+        </div>
+      </div>
+    </form>
   </div>
 
 </div>
