--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@
 <form class="foot-form">
   <label class="foot-label">
     <input class="foot-input" name="subs" type="email" placeholder="E-mail"/></label>
-    <button class="foot-btn" type="submit"><svg class="label-svg" width="24" height="24">
+    <button class="foot-btn" type="submit">Subscribe<svg class="label-svg" width="24" height="24">
       <use href="./images/icons.svg#icon-Frame-3"></use>
-    </svg> Subscribe</button>
+    </svg></button>
   
 </form>
         </div>
