--- a/portfolio.html
+++ b/portfolio.html
@@ -166,6 +166,17 @@
                       </svg></a></li>
                 </ul>
             </div> 
+            <div class="subscribe">
+    <p class="subscribe-p">Subscribe</p>
+    <form class="foot-form">
+      <label class="foot-label">
+        <input class="foot-input" name="subs" type="email" placeholder="E-mail"/></label>
+        <button class="foot-btn" type="submit">Subscribe<svg class="label-svg" width="24" height="24">
+          <use href="./images/icons.svg#icon-Frame-3"></use>
+        </svg></button>
+      
+    </form>
+            </div>
         </div>
     </footer>
           </body>
