--- a/index.html
+++ b/index.html
@@ -292,7 +292,19 @@
         <label class="modal-label" for="user-name">Name</label>
         <div class="input-div">
           <input class="input" id="user-name" name="user-name" type="text" />
+          <svg class="input-svg" width="18" height="24">
+            <use href="./images/icons.svg#icon-person-black-18dp-1-1"></use>
+          </svg>
         </div>
+      </div>
+      <div class="form-div">
+<label class="modal-label">Phone</label>
+<div class="input-div">
+  <input class="input" id="user-name" name="user-name" type="text"/>
+  <svg class="input-svg" width="18" height="24">
+    <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+  </svg>
+</div>
       </div>
     </form>
   </div>
