--- a/index.html
+++ b/index.html
@@ -298,13 +298,29 @@
         </div>
       </div>
       <div class="form-div">
-<label class="modal-label">Phone</label>
+<label class="modal-label" for="user-name">Phone</label>
 <div class="input-div">
   <input class="input" id="user-name" name="user-name" type="text"/>
   <svg class="input-svg" width="18" height="24">
     <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
   </svg>
 </div>
+      </div>
+      <div class="form-div">
+        <label class="modal-label" for="user-name">Email</label>
+        <div class="input-div">
+          <input class="input" id="user-name" name="user-name" type="text" />
+          <svg class="input-svg" width="18" height="24">
+            <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+          </svg>
+        </div>
+      </div>
+      <div class="modal-text">
+      <label class="modal-label" for="user-comment">Comment</label>
+      <textarea class="textarea" id="user-comment" name="user-comment" placeholder="Text input"></textarea>
+      </div>
+      <div class="modal-agree">
+        
       </div>
     </form>
   </div>
