--- a/index.html
+++ b/index.html
@@ -320,7 +320,8 @@
       <textarea class="textarea" id="user-comment" name="user-comment" placeholder="Text input"></textarea>
       </div>
       <div class="modal-agree">
-        
+        <input class="input-agree" visually-hidden id="user-privacy" type="checkbox" value="true" name="user-privacy"/>
+        <label class="label-agree" for="user-privacy">I accept the terms and conditions of the</label>
       </div>
     </form>
   </div>
