--- a/index.html
+++ b/index.html
@@ -321,8 +321,11 @@
       </div>
       <div class="modal-agree">
         <input class="input-agree" visually-hidden id="user-privacy" type="checkbox" value="true" name="user-privacy"/>
-        <label class="label-agree" for="user-privacy">I accept the terms and conditions of the</label>
+        <label class="label-agree" for="user-privacy"><span class="span-agree"><svg class="span-svg" width="10" height="8">
+          <use href="./images/icons.svg#icon-Property-1click"></use>
+        </svg></span>I accept the terms and conditions of the <a href="" class="a-agree">Privacy Policy</a></label>
       </div>
+      <button class="button-agree">Send</button>
     </form>
   </div>
 
