--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
     <p class="modal-p"></p>
     <form>
       <div class="form-div">
+        <h3 class="modal-h">Leave your contacts and we will call you back</h3>
         <label class="modal-label" for="user-name">Name</label>
         <div class="input-div">
           <input class="input" id="user-name" name="user-name" type="text" />
@@ -320,12 +321,12 @@
       <textarea class="textarea" id="user-comment" name="user-comment" placeholder="Text input"></textarea>
       </div>
       <div class="modal-agree">
-        <input class="input-agree" visually-hidden id="user-privacy" type="checkbox" value="true" name="user-privacy"/>
+        <input class="input-agree visually-hidden"  id="user-privacy" type="checkbox" value="true" name="user-privacy"/>
         <label class="label-agree" for="user-privacy"><span class="span-agree"><svg class="span-svg" width="10" height="8">
           <use href="./images/icons.svg#icon-Property-1click"></use>
-        </svg></span>I accept the terms and conditions of the <a href="" class="a-agree">Privacy Policy</a></label>
+        </svg></span>  I accept the terms and conditions of the <a href="" class="a-agree">Privacy Policy</a></label>
       </div>
-      <button class="button-agree">Send</button>
+      <button class="button-agree" type="button">Send</button>
     </form>
   </div>
 
