--- a/index.html
+++ b/index.html
@@ -286,10 +286,10 @@
     <button class="modal-btn" type="button" data-modal-close><svg class="modal-img" width="8" height="8">
       <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
     </svg></button>
-    <p class="modal-p"></p>
+    <p class="modal-p">Leave your contacts and we will call you back</p>
     <form>
       <div class="form-div">
-        <h3 class="modal-h">Leave your contacts and we will call you back</h3>
+        
         <label class="modal-label" for="user-name">Name</label>
         <div class="input-div">
           <input class="input" id="user-name" name="user-name" type="text" />
