--- a/index.html
+++ b/index.html
@@ -291,25 +291,25 @@
       <div class="form-div">
         <label class="modal-label" for="user-name">Name</label>
         <div class="input-div">
-          <input class="input" id="user-name" name="user-name" type="text" />
+          <input class="input" id="user-name" name="user-name" type="text">
           <svg class="input-svg" width="18" height="24">
             <use href="./images/icons.svg#icon-person-black-18dp-1-1"></use>
           </svg>
         </div>
       </div>
       <div class="form-div">
-<label class="modal-label" for="user-name">Phone</label>
+<label class="modal-label" for="phone-num">Phone</label>
 <div class="input-div">
-  <input class="input" id="user-name" name="user-name" type="text"/>
+  <input class="input" id="phone-num" name="user-name" type="text">
   <svg class="input-svg" width="18" height="24">
     <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
   </svg>
 </div>
       </div>
       <div class="form-div">
-        <label class="modal-label" for="user-name">Email</label>
+        <label class="modal-label" for="e-mail">Email</label>
         <div class="input-div">
-          <input class="input" id="user-name" name="user-name" type="text" />
+          <input class="input" id="e-mail" name="user-name" type="text" />
           <svg class="input-svg" width="18" height="24">
             <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
           </svg>
